# Censor

./: .gitignore  README.md  prohibited.txt  substitutions.txt  testDataFile.txt
Censor/: CMakeLists.txt  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  Functions.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadsafeQueue.hpp  argsparser.cpp  argsparser.hpp  main.cpp
Censor/Headers/: CensorInterface.hpp
CensorGtest/: CMakeLists.txt  main.cpp  tst_censortests.h
CensorUtest/: CensorUtest.pro  main.cpp
